--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "testing",
+  "name": "toggl_reports",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.1.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "prepare": "smui-theme compile static/smui.css -i src/theme"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.4.0",
@@ -16,16 +17,24 @@
     "svelte-material-ui": "^7.0.0-beta.14"
   },
   "devDependencies": {
+    "@smui/button": "^7.0.0-beta.14",
+    "@smui/icon-button": "^7.0.0-beta.14",
     "@smui/select": "^7.0.0-beta.14",
+    "@smui/snackbar": "^7.0.0-beta.14",
     "@smui/textfield": "^7.0.0-beta.14",
+    "@smui/top-app-bar": "^7.0.0-beta.14",
+    "@sveltejs/adapter-static": "^1.0.0-next.50",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tauri-apps/cli": "^1.4.0",
     "@tsconfig/svelte": "^5.0.0",
+    "sass": "^1.64.1",
+    "smui-theme": "^7.0.0-beta.14",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
     "svelte-preprocess": "^5.0.0",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.4"
+    "vite": "^4.4.4",
+    "vitest": "^1.4.0"
   }
 }
